--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lib",
+  "name": "a3_exo_librairie_ap",
   "version": "1.0.0",
   "description": "description",
   "main": "index.js",
